--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- Font principal -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap"
-      rel="stylesheet"
-    />
-
-    <!--Footer font-->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300&family=Nunito+Sans:wght@200;300;400&display=swap"
-      rel="stylesheet"
-    />
+    
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400&family=Raleway:wght@100;400&family=Spartan:wght@400;500&display=swap" rel="stylesheet"> 
 
     <title>Polilibro2</title>
   </head>
